# fantastic-pr

./: .fantastic-pr.yaml  .fantastic-prignore  .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md
config/: fantastic-pr.schema.json
docs/: review-system-audit.md
examples/workflows/: fantastic-pr.yml
prompts/: core_system.txt  mode_pr.txt  mode_scan.txt  output_contract.json
prompts/agents/: general.txt  maintainability.txt  security.txt
prompts/workflows/: critique_revise.txt  debate.txt  judge.txt
skills/fantastic-pr/: SKILL.md
src/: baseline.rs  checks.rs  config.rs  diff.rs  filtering.rs  github.rs  ingest.rs  llm.rs  main.rs  mcp.rs  sarif.rs
tests/: cli_blackbox.rs
