[package]
name = "fantastic-pr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
globset = "0.4"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rmcp = { version = "0.15", features = [
  "server",
  "client",
  "transport-io",
  "transport-child-process",
  "transport-streamable-http-client-reqwest",
  "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.48", features = ["rt-multi-thread", "process", "time"] }
toml = "0.8"

[dev-dependencies]
mockito = "1.6"
